src/test/deca/codegen/valid/no-objects/assign_value_to_variable.deca
// Description:
//    Test d'une variable initialisée après sa déclaration.
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 15/01/2022
{
    boolean a;
    a = true;
    println("Ok");
}